<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bayarea1"
    style="?android:attr/borderlessButtonStyle"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Location"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/locationspinner"
            android:spinnerMode="dropdown"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Event"
            android:id="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/eventSpinner"
            android:spinnerMode="dropdown"
            android:layout_alignStart="@+id/searchButton"
            android:layout_above="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Date"
            android:id="@+id/textView3"
            android:layout_alignStart="@+id/textView2"
            android:layout_above="@+id/eventSpinner"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:id="@+id/dateSpinner"
            android:spinnerMode="dropdown"
            android:layout_above="@+id/textView3"
            android:layout_alignStart="@+id/locationspinner"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/Search"
            android:id="@+id/searchButton"
            android:width="200dp"
            android:height="50dp"
            android:clickable="true"
            android:layout_alignStart="@+id/searchButton"
            android:layout_weight="0.02"
            android:layout_marginTop="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Browse"
            android:id="@+id/browseButton"
            android:height="50dp"
            android:width="200dp"
            android:clickable="true"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/dateSpinner"
            android:layout_marginBottom="75dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
